--- a/frontend/src/styles/our_work/FeaturedProjects.module.css
+++ b/frontend/src/styles/our_work/FeaturedProjects.module.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Karla');
-@import url('https://fonts.googleapis.com/css?family=Rubik');
-
 .center {
   min-height: 350px;
   text-align: center;
@@ -9,37 +6,7 @@
 }
 
 .bluebtn {
-  background-color: #0069ca;
-  color: #ffffff;
-  border: none;
-  height: 55px;
-  width: 180px;
-  border-radius: 100px;
-  border-width: 0px;
-
-  font-family: 'Rubik';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  letter-spacing: -0.02em;
-
   margin: 0 auto;
   display: block;
-}
-
-.buttonLink {
-  text-decoration: none;
-}
-
-.bluebtn:hover {
-  background-color: #C2E0FB;
-  color: #657788;
-}
-
-.bluebtn:focus,
-.bluebtn:active {
-  background-color: #808080;
 }
 
